--- a/Index.html
+++ b/Index.html
@@ -12,18 +12,18 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
-    <title>RE-Make-It</title>
+    <title>RE-MakeIt</title>
 </head>
 
 <body>
     <header>
-        <div> 
+        <div>
             <aside class="col-md-8 nleft5"></aside>
             <!-- <img src="multimedia/logo_recycling-g6a07e1127_1280.png" alt="Logo" height="2%" width="4%"></img> -->
         </div>
-            <div>
-                <aside class="col-md-8 nright"></aside> 
-                    <marquee behavor="alternate" class="marquee" direction="left">Si podes hacerlo, poder reutilizarlo</marquee>
+        <div>
+            <aside class="col-md-8 nright"></aside>
+            <marquee behavor="alternate" class="marquee" direction="left">Si podes hacerlo, poder reutilizarlo</marquee>
         </div>
     </header>
     <!-- Nav Bar Start -->
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="Index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/contacto.html">Contactanos</a>
@@ -73,56 +73,61 @@
     <!-- Banner  end -->
 
     <!-- Servicios inicia -->
-<article>
-    <h2>¿Qué hacemos?</h2>
-    <div class="container-fluid servicios">
-        <div class="row">
-            <aside class="col-md-6 nleft"></aside>
-            <aside class="col-md-6 nright">
-                <h3>Reutilización de prendas</h3>
-                <p>Las prendas o cualquiera material con textil se desgasta con el tiempo, y genera un residuo
-                    desperdiciado.
-                    Traenos esa prenda que tanto queres pero que tiene un desperfecto, te la emparchamos y te devolvemos
-                    un nuevo movelo.</p>
-                <button type="button" class="btn btn-warning">Más info</button>
-            </aside>
+    <article>
+        <h2>¿Qué hacemos?</h2>
+        <div class="container-fluid servicios">
+            <div class="row">
+                <aside class="col-md-6 nleft"></aside>
+                <aside class="col-md-6 nright">
+                    <h3>Reutilización de prendas</h3>
+                    <p>Las prendas o cualquiera material con textil se desgasta con el tiempo, y genera un residuo
+                        desperdiciado.
+                        Traenos esa prenda que tanto queres pero que tiene un desperfecto, te la emparchamos y te
+                        devolvemos
+                        un nuevo movelo.</p>
+                    <button type="button" class="btn btn-warning">Más info</button>
+                </aside>
+            </div>
         </div>
-    </div>
-    <h2>Nuestros arreglos</h2>
-    <div class="container-fluid servicios">
-        <div class="row">
-            <aside class="col-md-3 nleft2"></aside>
-            <aside class="col-md-3 nright">
-                <h3>Compra de desperdicio textil</h3>
-                <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento como
-                    fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
-                <button type="button" class="btn btn-warning">Más info</button>
-            </aside>
-            <aside class="col-md-3 nleft2"></aside>
-            <aside class="col-md-3 nright">
-                <h3>Compra de desperdicio textil</h3>
-                <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento como
-                    fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
-                <button type="button" class="btn btn-warning">Más info</button>
-            </aside>
+        <h2>Nuestros arreglos</h2>
+        <div class="container-fluid servicios">
+            <div class="row">
+                <aside class="col-md-3 nleft2"></aside>
+                <aside class="col-md-3 nright">
+                    <h3>Compra de desperdicio textil</h3>
+                    <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
+                        como
+                        fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
+                    <button type="button" class="btn btn-warning">Más info</button>
+                </aside>
+                <aside class="col-md-3 nleft2"></aside>
+                <aside class="col-md-3 nright">
+                    <h3>Compra de desperdicio textil</h3>
+                    <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
+                        como
+                        fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
+                    <button type="button" class="btn btn-warning">Más info</button>
+                </aside>
+            </div>
         </div>
-    </div>
-    <h2>Venta de desperdicio textil</h2>
-    <div class="container-fluid servicios">
-        <div class="row">
-            <aside class="col-md-6 nleft3"></aside>
-            <aside class="col-md-6 nright">
-                <h3>Despedicio textil</h3>
-                <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento como
-                    fibra regenerada para los sectores automotriz, colchonero entre otros...<br>
-                Conectar personas con residuos textiles con otros que demandan su material para convertirlos en
-                    indumentaria ( animal o de personas) reciclada, y con otras que ofrecen el servicio de confección de
-                    las mismas por tener materiales o por tener la habilidad para ello.</p>
-                <button type="button" class="btn btn-warning">Más info</button>
-            </aside>
+        <h2>Venta de desperdicio textil</h2>
+        <div class="container-fluid servicios">
+            <div class="row">
+                <aside class="col-md-6 nleft3"></aside>
+                <aside class="col-md-6 nright">
+                    <h3>Despedicio textil</h3>
+                    <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
+                        como
+                        fibra regenerada para los sectores automotriz, colchonero entre otros...<br>
+                        Conectar personas con residuos textiles con otros que demandan su material para convertirlos en
+                        indumentaria ( animal o de personas) reciclada, y con otras que ofrecen el servicio de
+                        confección de
+                        las mismas por tener materiales o por tener la habilidad para ello.</p>
+                    <button type="button" class="btn btn-warning">Más info</button>
+                </aside>
+            </div>
         </div>
-    </div>
-</article>
+    </article>
     <!-- Servicios  fin -->
     <!-- Galeria tienda inicio -->
     <h2>Nuevos productos</h2>
@@ -145,17 +150,7 @@
             <li>Remanente de telas</li>
         </ul>
     </section>
-    <!-- Inicio noticias -->
-    <section>
-        <h2>Noticias</h2>
-        <p>Conocé nuestras novedades acerca del cuidado del medio ambiente</p>
-        <iframe width="300" height="300" src="https://www.youtube.com/embed/RpkcmtvaEtQ" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-    </section>
-    <!-- Fin  noticias -->
-    <footer>
+        <footer>
         <div class="redes">
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -168,7 +163,6 @@
             <em>Re-Make-it@</em>
         </div>
     </footer>
-    
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
