--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../Index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contactanos</a>
@@ -61,59 +61,97 @@
         </div>
     </nav>
     <!-- Nav Bar End -->
+    <!-- Card inicia  -->
     <article>
         <div class="card">
             <div class="card-body"> Sobre Nosotros</div>
         </div>
     </article>
+    <!-- Card FINALIZA  -->
 
-    <!-- Card inicia  -->
-    <section class="nosotros2">
-        <aside class="nleft"></aside>
-        <aside class="nright">
-            <h3>Quienes Somos</h3>
-            <p>DAJSLDKAJDLKASmet consectetur, adipisicing elit. Assumenda rem rerum, ducimus porro aut vero sapiente deleniti, adipisci laudantium repellendus quis error harum, tempora est dignissimos nemo esse? Ipsum, saepe!</p>
-            <a class="boton1" href="#">Mas info</a>
-        </aside>
+    <!-- MISION VISION VALOR INICIO  -->
+    <section class="mision">
+        <!-- VISION  inicio-->
+        <article class="card3">
+            <div class="card-img3"></div>
+            <h3>Nuestras Visión</h3>
+            <p> Creemos que a la hora de vestirnos surge una necesidad de utilidad más que
+                imponernos modas.Creemos que es injusto para nuestro planeta que ese desecho no sea utilizado para otros
+                fines.
+                todos los que consideramos la vestimenta como algo que nos representa y ¿A quiénes mejorará la vida este
+                producto?
+            </p>
+            <div>
+                <a class="boton1" href="#">Mas info</a>
+            </div>
+        </article>
+        <!-- VISIN  Fin -->
+
+        <!-- mision  inicio-->
+        <article class="card3">
+            <div class="card-img31"></div>
+            <h3>Nuestra Misión</h3>
+            <p>Nuestras Misión Tenemos la misión de poder construir una comunidad para conectar a esas personas que
+                necesitan
+                renovar su vestimenta con otras que quieren aportar su trabajo, dada su habilidad manual, creativa y
+                moderna, para que muchos usuarios no
+                pierdan ese material tan importante que habita en sus armarios.</p>
+            <div>
+                <a class="boton1" href="#">Mas info</a>
+            </div>
+        </article>
+        <!-- mision    Fin -->
+
+        <!-- valor  inicio-->
+        <article class="card3">
+            <div class="card-img32"></div>
+            <h3>Nuestro Valor</h3>
+            <p>El valor que queremos mantener Nos comprometemos a aportar un
+                granito de arena al planeta, sabemos que la industria textil genera un gran consumo de los tesoros más
+                modernos, el agua.
+                Creemos en el respeto del valor del trabajo del otro y el cuidado de las intenciones de los usuarios de
+                prendas.
+            </p>
+            <div>
+                <a class="boton1" href="#">Mas info</a>
+            </div>
+        </article>
+        <!-- valor    Fin -->
     </section>
-
-<!-- Card FINALIZA  -->
-    <!-- <h2 class="bordecolor">Nuestras Visión</h2>
-    <p> Remake -It creemos que a la hora de vestirnos surge una necesidad de utilidad más que imponernos modas. Creemos
-        que es injusto para nuestro planeta que ese desecho no sea utilizado para otros fines. todos los que
-        consideramos la vestimenta como algo que nos representa y ¿A quiénes mejorará la vida este producto?
-    </p>
-
-    <h2 class="bordecolor">Nuestras Misión</h2>
-    <p> Tenemos la misión de poder construir una comunidad para conectar a esas personas que necesitan renovar su
-        vestimenta con otras que quieren aportar su trabajo, dada su habilidad manual, creativa y moderna, para que
-        muchos usuarios no pierdan ese material tan importante que habita en sus armarios.
-    </p>
-
-    <h2 class="bordecolor">El valor que queremos mantener</h2>
-    <p> Nos comprometemos a aportar un granito de arena al planeta, sabemos que la industria textil genera un gran
-        consumo de los tesoros más modernos, el agua.Creemos en el respeto del valor del trabajo del otro y el cuidado
-        de las intenciones de los usuarios de prendas.
-    </p>
-
-    <h2>Te hacemos parte de nuestro proceso de fabricacion</h2>
-    <video src="../Multimedia/nuestro proceso industria-74507.mp4" alt="Proceso" height="25%" width="25%"></video> -->
-
-    <h2>Veni a visitarnos</h2>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13141.262400231837!2d-58.4171029!3d-34.5708801!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59f0e33d4eb%3A0xb4d7c2d0044d32e!2sParque%20Tres%20de%20Febrero!5e0!3m2!1ses-419!2sar!4v1680403811898!5m2!1ses-419!2sar"
-        width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <div>
-        <p>Parque chas</p> <BR>
-        <P>PBA </p><BR>
-        <P>CP:1418GA </p><BR>
-        <P>TEL: 11438439 </p><BR>
-    </div>
+    <!-- MISION VISION VALOR FIN   -->
 
 
+    <!-- NOticias  inicio  -->
+    <section class="mapa">
+        <article class="card4">
+            <div class="card-img34"></div>
+            <h3>Medio ambiente</h3>
+            <p>Conocé nuestras novedades acerca del cuidado del medio ambiente</p>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/RpkcmtvaEtQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </article>
+    <!-- NOticias  FINALIZA  -->
 
-
+    <!-- MAPA LOCATION INICIO-->
+        <article class="card4">
+            <div class="card-img34"></div>
+            <h3>¿Dónde estamos?</h3>
+            <h4>Veni a visitarnos</h4>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13141.262400231837!2d-58.4171029!3d-34.5708801!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59f0e33d4eb%3A0xb4d7c2d0044d32e!2sParque%20Tres%20de%20Febrero!5e0!3m2!1ses-419!2sar!4v1680403811898!5m2!1ses-419!2sar"
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div>
+                <p>Parque chas|PBA|CP:1418GATEL:11438439|ARG </p>
+            </div>
+            <div>
+                <a class="boton1" href="#">Mas info</a>
+            </div>
+        </article>
+    </section>
+    <!-- MAPA FIN-->
     <footer>
         <div class="redes">
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -137,4 +175,5 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
