--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Procesos de reciclaje textil ">
+    <meta name="keywords"  content="textil,reciclaje,sustentable, industria, telas">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="estilospage.css">
-    <link rel="shortcut icon" href="Multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
     <title>Sobre Nosotros</title>
 </head>
 
@@ -42,16 +45,19 @@
                     <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contactanos</a>
+                    <a class="nav-link" href="sustentabilidad.html">Sustentabilidad</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sustentabilidad.html">Sustentabilidad</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contactanos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
@@ -64,7 +70,7 @@
     <!-- Card inicia  -->
     <article>
         <div class="card">
-            <div class="card-body"> Sobre Nosotros</div>
+            <div class="card-body col-xs-1 col-md-3 col-sm -3 col lg-3"> Sobre Nosotros</div>
         </div>
     </article>
     <!-- Card FINALIZA  -->
@@ -127,24 +133,23 @@
             <div class="card-img34"></div>
             <h3>Medio ambiente</h3>
             <p>Conocé nuestras novedades acerca del cuidado del medio ambiente</p>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/RpkcmtvaEtQ" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/RpkcmtvaEtQ" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </article>
-    <!-- NOticias  FINALIZA  -->
+        <!-- NOticias  FINALIZA  -->
 
-    <!-- MAPA LOCATION INICIO-->
+        <!-- MAPA LOCATION INICIO-->
         <article class="card4">
             <div class="card-img34"></div>
             <h3>¿Dónde estamos?</h3>
-            <h4>Veni a visitarnos</h4>
+            <h4>Veni a visitarnos </h4>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13141.262400231837!2d-58.4171029!3d-34.5708801!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59f0e33d4eb%3A0xb4d7c2d0044d32e!2sParque%20Tres%20de%20Febrero!5e0!3m2!1ses-419!2sar!4v1680403811898!5m2!1ses-419!2sar"
-                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div>
-                <p>Parque chas|PBA|CP:1418GATEL:11438439|ARG </p>
+                <p>Parque chas|PBA|CP:1418</p>
             </div>
             <div>
                 <a class="boton1" href="#">Mas info</a>
@@ -174,6 +179,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
