--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Diseño en Indumentaria Sustentables">
+    <meta name="keywords" content="Sustentabilidad, Medio ambiente, reciclaje, planetcare">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
     <title>RE-MakeIt</title>
@@ -42,16 +45,19 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contactanos</a>
+                    <a class="nav-link" href="pages/sustentabilidad.html">Sustentabilidad</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/sustentabilidad.html">Sustentabilidad</a>
+                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/sobrenosotros.html">Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html">Contactanos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
@@ -77,8 +83,8 @@
         <h2>¿Qué hacemos?</h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-6 nleft"></aside>
-                <aside class="col-md-6 nright">
+                <aside class="col-md-6 col-sm-1 nleft"></aside>
+                <aside class="col-md-6 col-sm-1 nright">
                     <h3>Reutilización de prendas</h3>
                     <p>Las prendas o cualquiera material con textil se desgasta con el tiempo, y genera un residuo
                         desperdiciado.
@@ -92,16 +98,16 @@
         <h2>Nuestros arreglos</h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-3 nleft2"></aside>
-                <aside class="col-md-3 nright">
+                <aside class="col-md-3 col-sm-1 nleft2"></aside>
+                <aside class="col-md-3 col-sm-1 nright">
                     <h3>Compra de desperdicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
                         fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
                     <button type="button" class="btn btn-warning">Más info</button>
                 </aside>
-                <aside class="col-md-3 nleft2"></aside>
-                <aside class="col-md-3 nright">
+                <aside class="col-md-3 col-sm-1 nleft2"></aside>
+                <aside class="col-md-3 col-sm-1 nright">
                     <h3>Compra de desperdicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
@@ -113,8 +119,8 @@
         <h2>Venta de desperdicio textil</h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-6 nleft3"></aside>
-                <aside class="col-md-6 nright">
+                <aside class="col-md-6 col-sm-1 nleft3"></aside>
+                <aside class="col-md-6 col-sm-1 nright">
                     <h3>Despedicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
@@ -150,7 +156,7 @@
             <li>Remanente de telas</li>
         </ul>
     </section>
-        <footer>
+    <footer>
         <div class="redes">
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -172,6 +178,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
