--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacto Prendas Sustentables">
+    <meta name="keywords" content="prendas,reciclaje,sustentable, contacto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="estilospage.css">
-    <link rel="shortcut icon" href="Multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
     <title>Contacto</title>
 </head>
 
@@ -42,16 +45,19 @@
                     <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contactanos</a>
+                    <a class="nav-link" href="sustentabilidad.html">Sustentabilidad</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sustentabilidad.html">Sustentabilidad</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contactanos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
@@ -115,6 +121,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
