--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Prendas sustentabless textil ">
+    <meta name="keywords"  content="textil,reciclaje,prendas, ecologicas, telas">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="estilospage.css">
-    <link rel="shortcut icon" href="Multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/logo_recycling-g6a07e1127_1280.png" type="image/x-icon">
     <title>Tienda</title>
 </head>
+
 <body>
     <header>
-        <div> 
+        <div>
             <aside class="col-md-8 nleft5"></aside>
             <!-- <img src="multimedia/logo_recycling-g6a07e1127_1280.png" alt="Logo" height="2%" width="4%"></img> -->
         </div>
-            <div>
-                <aside class="col-md-8 nright"></aside> 
-                    <marquee behavor="alternate" class="marquee" direction="left">Si podes hacerlo, poder reutilizarlo</marquee>
+        <div>
+            <aside class="col-md-8 nright"></aside>
+            <marquee behavor="alternate" class="marquee" direction="left">Si podes hacerlo, poder reutilizarlo</marquee>
         </div>
     </header>
     <!-- Nav Bar Start -->
@@ -59,35 +64,102 @@
         </div>
     </nav>
     <!-- Nav Bar End -->
+
     <article>
         <div class="card">
             <div class="card-body"> Tienda</div>
         </div>
     </article>
 
-    <footer>
-        <div class="redes">
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div>
-            <em>Políticas de privacidad</em><br>
-            <em>Terminos y condiciones de Compra</em> <br>
-            <em>Re-Make-it@</em>
-        </div>
-    </footer>
+    <!-- Animaciòn -->
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
+    <article>
+        <div class="cubo">
+            <div class="cara"></div>
+        </div>
+        <article>
+
+            <!-- Animaciòn fin  -->
+
+            <!-- Tienda inicia  -->
+            <section>
+                <div class="tienda">
+                    <div data-aos="zoom-in" class="tiendax img1">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+                    <div data-aos="zoom-in"class="tiendax img2">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+                    <div data-aos="zoom-in" class="tiendax img3">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+                    <div data-aos="zoom-in" class="tiendax img4">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+                    <div data-aos="zoom-in" class="tiendax img5">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+                    <div data-aos="zoom-in" class="tiendax img6">
+                        <h3>Exclusivos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aperiam doloribus ad
+                            culpa aut provident praesentium</p>
+                        <br>
+                        <br>
+                        <a class="boton1" href="#">Ver más</a>
+                    </div>
+
+                    <footer>
+                        <div class="redes">
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                        <div>
+                            <em>Políticas de privacidad</em><br>
+                            <em>Terminos y condiciones de Compra</em> <br>
+                            <em>Re-Make-it@</em>
+                        </div>
+                    </footer>
+
+                    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+                        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+                        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+                        crossorigin="anonymous"></script>
+                    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                    <script>
+                        AOS.init();
+                    </script>
 </body>
 
 </html>
