--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- Servicios inicia -->
     <article>
-        <h2>¿Qué hacemos?</h2>
+        <h2><strong>¿QUE HACEMOS?</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
                 <aside class="col-md-6 col-sm-1 nleft"></aside>
@@ -95,7 +95,7 @@
                 </aside>
             </div>
         </div>
-        <h2>Nuestros arreglos</h2>
+        <h2><strong>NUESTROS ARREGLOS</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
                 <aside class="col-md-3 col-sm-1 nleft2"></aside>
@@ -116,7 +116,7 @@
                 </aside>
             </div>
         </div>
-        <h2>Venta de desperdicio textil</h2>
+        <h2><strong>VENTA DE DESPERDICIO TEXTIL</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
                 <aside class="col-md-6 col-sm-1 nleft3"></aside>
@@ -136,18 +136,18 @@
     </article>
     <!-- Servicios  fin -->
     <!-- Galeria tienda inicio -->
-    <h2>Nuevos productos</h2>
+    <h2><strong>PRODUCTOS</strong></h2>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 item item1"></div>
-            <div class="col-md-4 item item2"></div>
-            <div class="col-md-4 item item3"></div>
+            <div class="col-md-4 col-sm-1 item item1"></div>
+            <div class="col-md-4 col-sm-1 item item2"></div>
+            <div class="col-md-4 col-sm-1 item item3"></div>
         </div>
     </div>
     <!-- Galeria tienda fin -->
 
     <section>
-        <h2>Desperdicios y remanentes textiles que recolectamos</h2>
+        <h2><strong>DESPERDICIOS Y REMANENTES TEXTILES QUE RECOLECTAMOS</strong></h2>
         <ul>
             <li>Algodón y polialgodón</li>
             <li>Poliester</li>
