--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <h2><strong>¿QUE HACEMOS?</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-6 col-sm-1 nleft"></aside>
-                <aside class="col-md-6 col-sm-1 nright">
+                <aside class="col-md-6 nleft"></aside>
+                <aside class="col-md-6 nright1">
                     <h3>Reutilización de prendas</h3>
                     <p>Las prendas o cualquiera material con textil se desgasta con el tiempo, y genera un residuo
                         desperdiciado.
@@ -98,16 +98,16 @@
         <h2><strong>NUESTROS ARREGLOS</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-3 col-sm-1 nleft2"></aside>
-                <aside class="col-md-3 col-sm-1 nright">
+                <aside class="col-md-3 col-sm-1 col-xs-6 nleft2"></aside>
+                <aside class="col-md-3 col-sm-1 col-xs-6 nright1">
                     <h3>Compra de desperdicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
                         fibra regenerada para los sectores automotriz, colchonero entre otros...</p>
                     <button type="button" class="btn btn-warning">Más info</button>
                 </aside>
-                <aside class="col-md-3 col-sm-1 nleft2"></aside>
-                <aside class="col-md-3 col-sm-1 nright">
+                <aside class="col-md-3 col-sm-1 col-xs-6 nleft2"></aside>
+                <aside class="col-md-3 col-sm-1 col-xs-6 nright1">
                     <h3>Compra de desperdicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
@@ -119,8 +119,8 @@
         <h2><strong>VENTA DE DESPERDICIO TEXTIL</strong></h2>
         <div class="container-fluid servicios">
             <div class="row">
-                <aside class="col-md-6 col-sm-1 nleft3"></aside>
-                <aside class="col-md-6 col-sm-1 nright">
+                <aside class="col-md-6 nleft3"></aside>
+                <aside class="col-md-6 nright1">
                     <h3>Despedicio textil</h3>
                     <p>Contamos con desperdicio textil empaquetado para múltiple uso y adecuado para el procesamiento
                         como
